--- a/src/main/resources/static/css/me.css
+++ b/src/main/resources/static/css/me.css
@@ -101,11 +101,16 @@ body{
     color: #333 !important;
 }
 
+.color-fade {
+    background: rgba(123, 94, 155, 0.5);
+}
+
 /*----------shadow-----------------------*/
 .m-shadow-small{
     -webkit-box-shadow: 0 4px 8px rgba(0,0,0,0.2) !important;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2) !important;
 }
+
 
 /*-----------position-------------*/
 .m-top-right{
